samples/_failures_safe/1761081716_dd621f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32bb6ff6.c: In function ‘handle_finished’:
./samples/SAFE/__tmp_32bb6ff6.c:173:13: error: expected expression at end of input
  173 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_32bb6ff6.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32bb6ff6.c:173:13: error: expected declaration or statement at end of input
